Wed Nov 18 11:54:57 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_find_widget): Accept drops
	that are sent to a toplevel but are not within the
	toplevels bounds.

	* gdk/gdkdnd.c gdk/gdk.h: Added support for a
	XdndProxy atom which proxies the drag to another window.

1998-11-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkpaned.h (struct _GtkPaned): Removed the cursor field, now
	that it is not needed.

Tue Nov 17 1998 The Rasterman <raster@redhat.com>
	* gdk/gdk.h, gdk/gdkwindow.c: Added gdk_window_get_deskrelative_origin
	  function to correctly determine gdk window position relative to
	  its "root window" - contains check for an Enlightenment
	  virtual root window.
	* gtk/gtkhandlebox.c: changed gdk_window_get_origin ->
	  gdk_window_get_deskrelative_origin to get the origin of dragged
	  handleboxes correctly. Now it works correctly with E.
	  
Tue Nov 17 1998  Tuomas Lukka <lukka@iki.fi>

	* gtk/gtktypeutils.c: Fix vital bug where LOOKUP was used when
 	  getting types even though we were not using real type names,
	  just the index.  This caused random crashes when more than 
	  256 types were defined.

1998-11-17  Martin Baulig  <martin@home-of-linux.org>

	* gtk/genmarshal.pl: Put output files in the current directory
	and not in the $(srcdir) since the VPATH is ignored for built
	sources.

Tue Nov 17 01:37:53 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/genmarshal.pl
	* gtk/Makefile.am: check for unchanged autogenerated files, so
	we don't rebuild everything just for adding a new function

Mon Nov 16 19:19:00 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpixmap.h
	  gtk/gtkpixmap.c: Pixmaps now grey out when insensitive,
	  code thanks to GNOME stock by Eckehard Berns.  New function
	  gtk_pixmap_set_build_insensitive to provide ability to turn 
	  this off.

Tue Nov 17 00:06:29 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.h (struct _GtkNotebook): new flags : homogeneous;